# BayerFlow-Win

./: CMakeLists.txt  README.md  bayerflow_setup.iss  parallel_denoise.py  raft_flow_batch.py  raft_server.py
cli/: main.c
core/: ari_reader.c  braw_dec.c  braw_enc.c  braw_writer.c  cineform_dec.c  cineform_enc.c  crm_dec.c  dct.c  denoise.c  denoise_core.c  dng_reader.c  dng_writer.c  exr_writer.c  frame_encoder.c  frame_reader.c  hotpixel_profile.c  motion_est.c  mov_reader.c  mov_writer.c  mxf_reader.c  noise_profile.c  prores_raw_dec.c  rice_golomb.c  spatial_denoise.c  temporal_filter.c  temporal_techniques.c  tile_encoder.c  zraw_dec.c
gui/: BayerConverter.cpp  BayerConverter.h  DenoiseWorker.cpp  DenoiseWorker.h  MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h  main.cpp
include/: RAWDenoiser-Bridging-Header.h  ari_reader.h  braw_dec.h  braw_enc.h  braw_writer.h  cineform_dec.h  cineform_enc.h  compat_posix.h  compat_threads.h  crm_dec.h  denoise.h  denoise_bridge.h  dirent.h  dng_reader.h  dng_writer.h  exr_writer.h  frame_reader.h  motion_est.h  mov_reader.h  mxf_reader.h  noise_profile.h  of_apple.h  platform_gpu.h  platform_of.h  prores_raw_dec.h  prores_raw_enc.h  r3d_reader.h  raft_onnx.h  rgb_temporal_filter.h  spatial_denoise.h  temporal_filter.h  temporal_techniques.h  training_data.h  unistd.h  wiener_temporal.h  zraw_dec.h
platform/mac/: platform_gpu_mac_stub.c  platform_of_mac_stub.c  platform_stubs.c
platform/win/: dncnn_cuda.cu  platform_gpu_win.c  platform_of_win.c  platform_stubs.c  raft_onnx.c  temporal_filter.cu
qml/: Backend.cpp  Backend.h  CompareView.qml  CubeLUT.cpp  CubeLUT.h  FormatHub.qml  ImageProvider.h  LicenseDialog.qml  OnboardingPopup.qml  ScopeView.qml  SettingsPanel.qml  ShowcaseMode.qml  SplashScreen.qml  TrainingConsentPopup.qml  main.cpp  main.qml
